Fix footer layout on smaller devices

--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -97,6 +97,14 @@ header {
   background-color: #2d2d2d;
   line-height: 1.9em;
 
+  .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-wrap: wrap;
+  }
+
   .footer-text {
     font-size: 0.8em;
     text-align: justify;
@@ -133,7 +141,7 @@ header {
     }
   }
 
-  .footer-links {
+  .footer-content {
     a {
       color: $info;
       text-decoration: none;
@@ -164,22 +172,10 @@ header {
 
   /* Extra large devices (large desktops, 1200px and up) */
     @media (min-width: 1200px) {
-        .logo {
-        width: 250px;
-        }
-
-        .ncris {
-        width: 161px;
-        }
-
-        .acknowledge {
-        margin-right: 50px;
-        }
-
-        .card-container {
-        margin-left: 0;
-        margin-right: 0;
-        }
+      .card-container {
+      margin-left: 0;
+      margin-right: 0;
+      }
     }
 
   /* Large devices (desktops, 992px and up) */
@@ -187,18 +183,6 @@ header {
     .custom-flex {
       flex-direction: row;
       justify-content: space-between;
-    }
-
-    .logo {
-      width: 180px;
-    }
-
-    .ncris {
-      width: 120px;
-    }
-
-    .acknowledge {
-      margin-right: 20px;
     }
 
     .card-container {
@@ -213,17 +197,13 @@ header {
       flex: 1 1 50%; /* Two columns per row */
     }
 
-    .logo {
-      width: 170px;
-    }
-
-    .ncris {
-      width: 80px;
-    }
-
     .set-width {
       max-width: 40%;
       margin-right: 40px;
+    }
+
+    .logo {
+      width: 200px;
     }
   }
 
@@ -233,17 +213,17 @@ header {
       flex-direction: column;
     }
 
-    .ncris {
-      width: 70px;
-      margin-bottom: 20px;
+    .set-width {
+      max-width: 50%;
     }
 
     .logo {
-      width: 130px;
+      width: 200px;
     }
 
-    .set-width {
-      max-width: 50%;
+    .footer-content {
+      flex-direction: column;
+      align-items: start;
     }
   }
 
@@ -253,17 +233,9 @@ header {
       flex-direction: column;
     }
 
-    .ncris {
-      width: 60px;
-      margin-bottom: 20px;
-    }
-
-    .logo {
-      width: 100px;
-    }
-
-    .footer-text {
-      text-align: start;
+    .footer-content {
+      flex-direction: column;
+      align-items: start;
     }
 
     .set-width {
